# YADRO_test_task

./: CMakeLists.txt  README.md  run.sh
example/: ex1.txt  ex2.txt  ex3.txt  ex4.txt
include/: club.h  event.h  parser.h  table.h  time_m.h
sample/: solution.cpp
src/: club.cpp  event.cpp  parser.cpp  table.cpp  time_m.cpp
